# peach-nostr-announcer-bot

./: .dockerignore  .flake8  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
app/: main.py  nostr.py  peach.py
peach_offers_data/: offers.json
